02-08-2017: v1
- Initial release.

10-03-2018: v2
- Add changelog.
- Add WiFi AP search feature on the web interface.