@@ -128,7 +128,7 @@
               </h4>
             </div>
             <div class="modal-body">
-              Thirst is a personal hobby project for fun. Current firmware version: v2.
+              Thirst is a personal hobby project for fun. Current firmware version: v3.
             </div>
             <div class="modal-footer">
               <button class="btn btn-default"
@@ -418,7 +418,7 @@
             <div class="panel-body">
               <div class="row form-group">
                 <label class="col-sm-3 control-label" for="notification-email">
-                  Email:
+                  E-mail:
                 </label>
                 <div class="col-sm-7">
                   <input type="email"
@@ -431,7 +431,7 @@
                     <p class="help-block">
                       <b>
                         <small>
-                          Email address can't be empty, can't contain non-ASCII
+                          E-mail address can't be empty, can't contain non-ASCII
                           characters and must not be more than 254 characters long.
                         </small>
                       </b>
@@ -485,7 +485,7 @@
                     <p class="help-block">
                       <b>
                         <small>
-                          Email notification's body can't be empty, must not
+                          E-mail notification's body can't be empty, must not
                           be more than 512 characters long and can only contain
                           alphanumeric characters, blank spaces, question mark,
                           exclamation mark, hyphen, comma and dot.
